# cvblob

./: CMakeLists.txt  ChangeLog  Doxyfile  README  cvBlobConfig.cmake.in  cvblob.pc.cmake.in
CMakeScripts/: FindOpenCV.cmake
contrib/cvBlobDLL/: README
contrib/cvBlobDLL/TestDLL/: ReadMe.txt  TestDLL.c  TestDLL.vcproj
contrib/cvBlobDLL/cvblobDLL/: cvblobDLL.cpp  cvblobDLL.h  cvblobDLL.sln  cvblobDLL.vcproj  stdafx.cpp
cvBlob/: CMakeLists.txt  cvaux.cpp  cvblob.cpp  cvblob.h  cvblobcolor.cpp  cvcolor.cpp  cvcontour.cpp  cvlabel.cpp  cvtrack.cpp
samples/: Makefile  red_object_tracking.cpp  red_object_tracking.txt
test/: CMakeLists.txt  test.cpp  test_random.cpp  test_tracking.cpp
